[package]
name = "melpomene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.19"
features = ["rt", "time", "macros"]

[dependencies.tracing]
version = "0.1.35"

[dependencies.tracing-subscriber]
version = "0.3.14"
optional = true

[dependencies.tracing-modality]
version = "0.1.1"
optional = true

[dependencies.mnemos-kernel]
package = "mnemos"
path = "../kernel"

[dependencies.mnemos-abi]
path = "../abi"

[dependencies.mnemos-std]
path = "../mstd"

[dependencies.postcard]
version = "0.7.3"
default-features = false

[dependencies.atty]
version = "0.2"
optional = true

[features]
trace-fmt = ["tracing-subscriber", "atty"]
# Note, the "trace-modality" feature requires the use of the Auxon modality tool.
# More information: https://auxon.io/products/modality
trace-modality = ["tracing-modality"]
default = [
    "trace-fmt",
]
