[package]
name = "melpomene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tracing]
version = "0.1.35"

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["registry"]
default-features = false

[dependencies.tracing-modality]
# version = "0.1.1"
optional = true
git = "https://github.com/auxoncorp/modality-tracing-rs"
rev = "6c9944c688db834d78e3f85c7e385dca939460da"

[dependencies.mnemos-kernel]
package = "mnemos"
path = "../kernel"

[dependencies.mnemos-abi]
path = "../abi"

[dependencies.mnemos-std]
path = "../mstd"

[dependencies.postcard]
version = "0.7.3"
default-features = false

[dependencies.atty]
version = "0.2"
optional = true

[dependencies.console-subscriber]
version = "0.1.6"
optional = true

[dependencies.tokio]
version = "1.19"
features = ["rt", "time", "macros"]

# Melpomene does not use any APIs from `maitake` directly. This dependency is
# instead required in order to enable `maitake`'s support for `tracing` 0.1.x,
# which is needed to support the Tokio Console while running in the simulator,
# but is not needed by actual builds of mnemOS running on real hardware.
[dependencies.maitake]
version = "0.1.0"
features = ["tracing-01"]

[features]
# enables Tokio Console support
trace-console = ["console-subscriber"]
trace-fmt = ["tracing-subscriber/fmt", "atty"]
# Note, the "trace-modality" feature requires the use of the Auxon modality tool.
# More information: https://auxon.io/products/modality
trace-modality = [
    "tracing-modality",
    # Note, works around a missing feature set in tracing-modality, can
    # be changed later
    "tokio/net",
    "tokio/sync",
]
default = [
    "trace-console",
    "trace-fmt",
]
