[package]
name = "melpomene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tracing]
version = "0.1.35"

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["registry"]
default-features = false

[dependencies.tracing-modality]
# version = "0.1.1"
optional = true
git = "https://github.com/auxoncorp/modality-tracing-rs"
rev = "9c23c188466357e7ad0c618b4edfe9514e9bf764"

[dependencies.uuid]
version = "1.1.2"
default-features = false
features = ["serde"]

[dependencies.mnemos-kernel]
package = "mnemos"
path = "../kernel"

[dependencies.mnemos-alloc]
version = "0.1.0"

[dependencies.mnemos-abi]
path = "../abi"

[dependencies.mnemos-std]
path = "../mstd"

[dependencies.postcard]
version = "1.0.1"
default-features = false

[dependencies.atty]
version = "0.2"
optional = true

[dependencies.console-subscriber]
version = "0.1.6"
optional = true

[dependencies.tokio]
version = "1.19"
features = ["rt", "time", "macros"]

[dependencies.clap]
version = "3.0"
features = ["env", "derive"]

[dependencies.humantime]
version = "2"
optional = true

[dependencies.embedded-graphics]
version = "0.7.1"

[dependencies.embedded-graphics-simulator]
version = "0.3.0"

[dependencies.chrono]
version = "0.4"

[dependencies.profont]
version = "0.6.1"

[dependencies.input-mgr]
git = "https://github.com/tosc-rs/teletype/"
rev = "1940b48dd71b905251981336602a1665de18d181"

[dependencies.ring-drawer]
git = "https://github.com/tosc-rs/teletype/"
rev = "1940b48dd71b905251981336602a1665de18d181"

# Melpomene does not use any APIs from `maitake` directly. This dependency is
# instead required in order to enable `maitake`'s support for `tracing` 0.1.x,
# which is needed to support the Tokio Console while running in the simulator,
# but is not needed by actual builds of mnemOS running on real hardware.
[dependencies.maitake]
version = "0.1.0"
features = ["tracing-01"]

[dependencies.forth3]
git = "https://github.com/jamesmunns/forth3"
rev = "8743d9ef9eea0eb0e4420231e4d6d6cdadcfb2fc"
features = ["async"]

[features]
# enables Tokio Console support
trace-console = ["console-subscriber", "humantime"]
trace-fmt = ["tracing-subscriber/fmt", "atty"]
# Note, the "trace-modality" feature requires the use of the Auxon modality tool.
# More information: https://auxon.io/products/modality
trace-modality = [
    "tracing-modality",
    # Note, works around a missing feature set in tracing-modality, can
    # be changed later
    "tokio/net",
    "tokio/sync",
]
default = [
    "trace-console",
    "trace-fmt",
]
