[package]
name = "mnemos-std"
version = "0.1.0"
description = "A tiny embedded operating system userspace library"
repository = "https://github.com/jamesmunns/pellegrino"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[lib]
name = "mstd"

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.cordyceps]
version = "0.3"
default-features = false

[dependencies.maitake]
version = "0.1.0"
default-features = false

[dependencies.abi]
package = "mnemos-abi"
version = "0.1.0"
path = "../abi"

[dependencies.mnemos-alloc]
version = "0.1.0"

[dependencies.heapless]
version = "0.7.10"
features = ["defmt-impl"]

[dependencies.postcard]
version = "1.0.1"
default-features = false

[features]
panic-handler = []

