[package]
name = "sermux-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.cobs]
version = "0.2"
default-features = false

[features]
use-std = []

[dev-dependencies.proptest]
version = "1.2"