[package]
name = "spitebuf"
version = "0.1.0"
edition = "2021"
description = """
Spitebuf is an async MPSC queue, based on the Vyukov algorithm
originally implemented in the heapless crate. It can be used on
targets with or without an allocator.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.maitake]
version = "0.1.0"
default-features = false
