cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "spitebuf"
version = "0.1.0"
edition = "2021"
description = """
Spitebuf is an async MPSC queue, based on the Vyukov algorithm
originally implemented in the heapless crate. It can be used on
targets with or without an allocator.
"""
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
readme = "./README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.maitake]
workspace = true
default-features = false
