[package]
name = "mnemos-trace-proto"
version = "0.1.0"
edition = "2021"
description = """
Wire types used by the binary tracing subscriber used on hardware targets.
Extracted as a separate crate to allow external decoders (like `crowtty`)
to share protocol definitions.
"""

[features]
std = ["tracing-serde-structured/std", "serde/std"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.tracing-serde-structured]
git = "https://github.com/jamesmunns/tracing-serde-structured"
branch = "james/2trace2furious"
default-features = false

[dependencies.tracing-core]
git = "https://github.com/tokio-rs/tracing"
default-features = false
