cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "mnemos-trace-proto"
version = "0.1.0"
edition = "2021"
description = """
Wire types used by the binary tracing subscriber used on hardware targets.
Extracted as a separate crate to allow external decoders (like `crowtty`)
to share protocol definitions.
"""
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
readme = "./README.md"
license = "MIT OR Apache-2.0"

[features]
std = ["tracing-serde-structured/std", "serde/std"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.tracing-serde-structured]
git = "https://github.com/hawkw/tracing-serde-structured"
branch = "eliza/span-fields"
default-features = false

[dependencies.tracing-core]
version = "0.1.31"
default-features = false
