[package]
name = "crowtty"
version = "0.1.0"
edition = "2021"


### See `main.rs::serial` comments for why these duplicate dependencies exit

[dependencies.serialport_regular]
package = "serialport"
version = "4.0.1"

[dependencies.serialport_macos_hack]
package = "serialport"
git = "https://github.com/metta-systems/serialport-rs"
rev = "7fec572529ec35b82bd4e3636d897fe2f1c2233f"

###

[dependencies.cobs]
version = "0.2"

[dependencies.clap]
version = "4.0"
features = ["derive", "env"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.postcard]
version = "1"
features = ["alloc"]

[dependencies.owo-colors]
version = "3.5"
features = ["supports-colors"]

[dependencies.tracing-serde-structured]
git = "https://github.com/jamesmunns/tracing-serde-structured"
branch = "james/2trace2furious"
default-features = true

[dependencies.sermux-proto]
path = "../../source/sermux-proto"
features = ["use-std"]

[dependencies.mnemos-trace-proto]
path = "../../source/trace-proto"
features = ["std"]

[dependencies.tracing-02]
package = "tracing"
git = "https://github.com/tokio-rs/tracing"
# branch = "master"
default-features = false

[dependencies.tracing-subscriber]
package = "tracing-subscriber"
git = "https://github.com/tokio-rs/tracing"
# branch = "master"
default-features = false
features = ["std"]
