cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "crowtty"
version = "0.1.0"
description = """
crowtty is a host tool, aimed at speaking the sermux protocol with a
simulator or physical target. It allows for receiving tracing messages,
as well as mapping multiplexed "ports" as TCP sockets on the host.
"""
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2021"


### See `connection::serial` comments for why these duplicate dependencies exit

[dependencies.serialport_regular]
package = "serialport"
version = "4.0.1"

[dependencies.serialport_macos_hack]
package = "serialport"
git = "https://github.com/metta-systems/serialport-rs"
rev = "7fec572529ec35b82bd4e3636d897fe2f1c2233f"

###

[dependencies.libcrowtty]
path = "../libcrowtty"

[dependencies.clap]
version = "4.0"
features = ["derive", "env"]

[dependencies.tracing]
version = "0.1.37"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std"]

[dependencies.miette]
workspace = true
features = ["fancy"]
