[package]
name = "dumbloader"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
readme = "./README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.postcard]
version = "0.7.3"
features = ["use-std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
